# try_drf

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
.github/workflows/: python-app.yml
algolia/: settings.py  urls.py  wsgi.py
blog/: index.py  models.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: index.html
quickstart/: serializers.py  views.py
snippets/: serializers.py  tests.py  urls.py  views.py
snippets/migrations/: 0001_initial.py
static/js/: script.js
